# cortex-knowledge-assistant

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md  SECURITY.md  cortex  cortex_launcher.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh  stop.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docker/: Dockerfile.api  compose.dev.yml  compose.infra.yml  compose.yml  docker-compose.dev.yml  docker-compose.secure.yml
docs/: ROADMAP.md  api-reference.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  index.md  security.md  troubleshooting.md  user-guides.md
docs/adr/: 0001-qdrant-como-vector-store.md  0002-embeddings-locales.md  0003-llm-falso-en-tests.md  0004-observabilidad.md  0005-estrategia-seguridad.md  0006-seleccion-modelos.md  README.md
k8s/api/: configmap.yaml  deployment.yaml  secret-example.yaml  service.yaml
k8s/networkpolicies/: cka-api-egress.yaml  cka-default-deny.yaml
k8s/qdrant/: deployment.yaml  service.yaml
k8s/redis/: deployment.yaml  service.yaml
scripts/: backup.sh  cka_admin.py  demo_full_e2e_real.py  demo_roles_banking.py  ingest_corpus_qdrant.py  restore.sh  run_cortex.sh  scan_hf_models.py  start_cortex_full.sh  stop_cortex.sh  try_it.py
src/cortex_ka/: __init__.py  build_info.py  config.py  logging.py
src/cortex_ka/api/: main.py
src/cortex_ka/application/: chunking.py  dlp.py  metrics.py  pii.py  pii_classifier.py  pii_masking.py  prompt_builder.py  query_processing.py  rag_service.py  reranking.py
src/cortex_ka/auth/: db.py  jwt_utils.py  models.py  passwords.py  seed_demo.py
src/cortex_ka/demos/: __init__.py  ingest_university_corpus.py  scheduler.py  seed_university.py
src/cortex_ka/domain/: models.py  ports.py
src/cortex_ka/eval/: pii_evaluator.py  prompt_injection_scenarios.py
src/cortex_ka/infrastructure/: embedding_local.py  llm_hf.py  llm_ollama.py  memory_cache.py  memory_store.py  redis_cache.py  retriever_qdrant.py  retriever_stub.py
src/cortex_ka/maintenance/: reset_environment.py
src/cortex_ka/scripts/: evaluate.py  ingest_docs.py  ingest_pdfs.py  init_qdrant.py
src/cortex_ka/system/: __init__.py  data_admin.py  setup.py  status.py
src/cortex_ka/transactions/: models.py  seed_demo.py  service.py
tests/: conftest.py  test_chunking.py  test_models.py  test_pii.py  test_prompt_builder.py  test_rag_service.py
ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: main.tsx  styles.css  vite-env.d.ts
ui/src/components/: Icons.tsx
ui/src/config/: domainLabels.ts
ui/src/modules/: AdminPanel.tsx  App.tsx  AuthContext.tsx  Chat.tsx  CustomerSnapshotPanel.tsx  DemoCredentialsPanel.tsx  DemoResetCountdown.tsx  DocumentManagement.tsx  Login.tsx  SetupWizard.tsx  SidePanel.tsx  SubjectContextPanel.tsx  TransactionalPanel.tsx  UserManagement.tsx  useSafeQuery.ts
ui/src/modules/__tests__/: AdminPanel.test.tsx
ui/src/services/: api.ts
